--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                             </button>
                         </h2>
                         <div id="collapseOne5" class="accordion-collapse collapse show" aria-labelledby="headingOne5">
-                            <div class="accordion-body py-4 px-5 font-normal text-justify md:text-lg text-base mx-10 my-2">
+                            <div class="accordion-body py-4 px-5 font-normal text-left md:text-justify md:text-lg text-base mx-10 my-2">
                                 <b>Sakola Rakyat</b> merupakan gerakan pendidikan alternatif yang diisi oleh <b>anak muda Cianjur</b> yang peduli terhadap mahalnya akses pendidikan dan kakunya sistem pendidikan di sekolah formal serta minimnya tingkat literasi di sebagian daerah di Cianjur. Sakola Rakyat memiliki <b>prinsip</b> untuk membangun ruang pendidikan yang ramah, non-kekerasan, dan anti diskriminasi bagi semua.
                             </div>
                         </div>
@@ -93,7 +93,7 @@
                             </button>
                         </h2>
                         <div id="collapseTwo5" class="accordion-collapse collapse" aria-labelledby="headingTwo5">
-                            <div class="accordion-body py-4 px-5 font-normal text-justify md:text-lg text-base mx-10 my-2">
+                            <div class="accordion-body py-4 px-5 font-normal text-left md:text-justify md:text-lg text-base mx-10 my-2">
                                 <b>Komersialisasi pendidikan</b> adalah salah satunya. Kami menilai terdapat pencurian nilai lebih yang memberikan dampak terhadap <b>akses pendidikan yang tidak merata</b> bahkan hingga hari ini biaya pendidikan layak semakin tinggi. Maka dari itu, <b>Sakola Rakyat</b> mencoba hadir sebagai <b>ruang independen</b> bagi masyarakat yang tidak mampu memenuhi hal tersebut.
                             </div>
                         </div>
@@ -105,7 +105,7 @@
                             </button>
                         </h2>
                         <div id="collapseThree5" class="accordion-collapse collapse" aria-labelledby="headingThree5">
-                            <div class="accordion-body py-4 px-5 font-normal text-justify md:text-lg text-base mx-10 my-2">
+                            <div class="accordion-body py-4 px-5 font-normal text-left md:text-justify md:text-lg text-base mx-10 my-2">
                                 Mewujudkan <b>pendidikan terbaik</b> bagi seluruh siswa di Indonesia dan berkomitmen untuk gotong-royong menciptakan <b>inovasi-inovasi pembelajaran relevan</b> sehingga berdampak baik untuk tujuan bersama, khususnya peningkatan <b>kualitas belajar</b> siswa Indonesia. 
                             </div>
                         </div>
@@ -117,7 +117,7 @@
                             </button>
                         </h2>
                         <div id="collapseFour5" class="accordion-collapse collapse" aria-labelledby="headingFour5">
-                            <div class="accordion-body py-4 px-5 font-normal text-justify md:text-lg text-base mx-10 my-2">
+                            <div class="accordion-body py-4 px-5 font-normal text-left md:text-justify md:text-lg text-base mx-10 my-2">
                                 Ya, <b>Sakola Rakyat</b> merupakan <b>gerakan</b> dalam upaya untuk menerapkan pendidikan terhadap masalah yang ada dan banyak menekankan <b>aspek dialog</b> antara pengajar dan siswa. Bagi siapa pun yang hendak belajar di Sakola Rakyat <b>tidak ada batasan</b>, setiap siswa berhak mendapatkan ilmu yang sama tanpa harus berkompetisi satu sama lain.
                             </div>
                         </div>
@@ -129,7 +129,7 @@
                             </button>
                         </h2>
                         <div id="collapseFive5" class="accordion-collapse collapse" aria-labelledby="headingFive5">
-                            <div class="accordion-body py-4 px-5 font-normal text-justify md:text-lg text-base mx-10 my-2">
+                            <div class="accordion-body py-4 px-5 font-normal text-left md:text-justify md:text-lg text-base mx-10 my-2">
                                 <b>Sakola Rakyat</b> mengajarkan <b>kemampuan dasar</b> untuk anak-anak seperti membaca, menulis dan berhitung dengan <b>metode yang mengasyikkan</b>, selain itu kami juga mengajak anak-anak untuk membuat karya seni dan <b>memulai gotong royong</b> sejak dini, agar mereka memiliki <b>jiwa sosial</b> dan <b>rasa peduli yang tinggi</b>.
                             </div>
                         </div>
@@ -293,7 +293,7 @@
                     <img src="assets/img/cara-berpartisipasi.jpg" alt="Mari Berpartisipasi" class="px-10 md:p-0 md:py-0 md:col-span-1 h-full w-full md:w-full md:h-full">
                 </div>
                 <div class="bg-white md:col-span-3 mx-10 p-5 lg:ml-5">
-                    <p class="font-normal text-lg text-justify">Kamu dapat berpartisipasi dalam bentuk apa pun sesuai dengan kemampuan dan kapasitas yang dimiliki seperti: langsung datang ke lokasi dan menginisiasi ide-ide baru bersama atau memberikan dukungan seperti membuat sebuah karya kesenian, mendonasikan sesuatu yang bermanfaat, dan menyebarluaskan informasi sesuai kemampuan kamu.
+                    <p class="font-normal text-lg text-left md:text-justify">Kamu dapat berpartisipasi dalam bentuk apa pun sesuai dengan kemampuan dan kapasitas yang dimiliki seperti: langsung datang ke lokasi dan menginisiasi ide-ide baru bersama atau memberikan dukungan seperti membuat sebuah karya kesenian, mendonasikan sesuatu yang bermanfaat, dan menyebarluaskan informasi sesuai kemampuan kamu.
                     <br><br>
                     Bagi kamu yang ingin mengirimkan karya atau bentuk donasi lainnya tidak perlu sungkan untuk ketuk <span class="underline text-blue-600"><a href="https://www.instagram.com/direct/t/340282366841710300949128226567056943775">dm</a></span> kami. Apapun yang bisa kamu berikan merupakan partisipasi besar bagi gerakan ini terutama <span class="text-blue-600"><a href="https://www.instagram.com/sakolarakyat/">@sakolarakyat</a></span>. Jadi jangan takut dan jangan khawatir, karena <span class="bg-red-200">semua orang yang berani dan masih mempertahankan kesadarannya punya kapasitas dan perannya masing-masing untuk setiap perubahan yang ia ciptakan.</span></p>
                 </div>
