--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                                 <p class="text-gray-700 text-base mb-4">
                                     Awal pembukaan kelas untuk anak-anak disambut hangat dan meriah, semua senang karena buku-buku telah datang untuk dibaca dan diceritakan.
                                 </p>
-                                <a href="https://www.instagram.com/p/CQNji-rJ5EM/" target="_blank"><button type="button" class=" inline-block px-6 py-2.5 bg-blue-600 text-white font-medium text-xs leading-tight uppercase rounded shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out">Read More</button></a>
+                                <a href="https://www.instagram.com/p/CQNji-rJ5EM/" target="_blank"><button type="button" class=" inline-block px-6 py-2.5 bg-blue-600 text-white font-medium text-xs leading-tight uppercase rounded shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out">Selengkapnya</button></a>
                             </div>
                         </div>
                       </div>
@@ -200,7 +200,7 @@
                                 <p class="text-gray-700 text-base mb-4">
                                     Anak-anak sangat senang dan bersemangat membuat sketsa design inspiratif dari <a href="https://instagram.com/sugarbombingworld" class="text-blue-500 underline">@sugarbombingworld</a> 😁😍
                                 </p>
-                                <a href="https://www.instagram.com/p/CQFogJYp9mA/" target="_blank"><button type="button" class=" inline-block px-6 py-2.5 bg-blue-600 text-white font-medium text-xs leading-tight uppercase rounded shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out">Read More</button></a>
+                                <a href="https://www.instagram.com/p/CQFogJYp9mA/" target="_blank"><button type="button" class=" inline-block px-6 py-2.5 bg-blue-600 text-white font-medium text-xs leading-tight uppercase rounded shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out">Selengkapnya</button></a>
                             </div>
                         </div>
                       </div>
@@ -214,7 +214,7 @@
                                 <p class="text-gray-700 text-base mb-4">
                                     Setiap akhir pekan rutin dibuka ruang bermain & belajar bagi anak. Selain itu disela-sela belajar, para ibu bergotong royong untuk memasak makanan bagi semua.Jadi, semua kenyang semua senang 😁
                                </p>
-                                <a href="https://www.instagram.com/p/CQITXsopZ3w/" target="_blank"><button type="button" class=" inline-block px-6 py-2.5 bg-blue-600 text-white font-medium text-xs leading-tight uppercase rounded shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out">Read More</button></a>
+                                <a href="https://www.instagram.com/p/CQITXsopZ3w/" target="_blank"><button type="button" class=" inline-block px-6 py-2.5 bg-blue-600 text-white font-medium text-xs leading-tight uppercase rounded shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out">Selengkapnya</button></a>
                             </div>
                         </div>
                       </div>
